--- a/source/index.html
+++ b/source/index.html
@@ -253,8 +253,8 @@
               <span>$ 95</span>
             </li>
           </ul>
+          <div class="products__pagination"></div>
         </div>
-        <div class="products__pagination"></div>
       </section>
       <section class="main__container main__container--blog">
         <h2>Blog</h2>
@@ -531,7 +531,7 @@
             <label class="visually-hidden" for="password"></label>
             <input id="password" name="password" type="password" placeholder="Password" required>
             <a href="#">Forgot your password?</a>
-            <button class="btn btn__filter btn__filter--login" type="submit">Log In</button>
+            <button class="btn btn__large btn__large--login" type="submit">Log In</button>
           </form>
           <div class="login__registration">
             <p>Don’t have an account?</p>
